[Wayland] Mostly unresponsive when starting with Light/Dark theme that is opposite system theme
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox90 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | + | fixed |
People
(Reporter: ke5trel, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Start with
MOZ_ENABLE_WAYLAND=1on Ubuntu 21.04 with default Yaru system theme. - Enable Dark theme in Firefox and restart.
Main process uses 100% CPU core and interface is laggy and sluggish about 50% of the time. Does not happen with Wayland disabled or using Light/Dark theme that matches system, for example Dark theme with Yaru-dark.
Starting with matching theme and then changing it at runtime causes some popups to stop appearing (eg addon installation).
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8fe101d17fe726e10a9a840e5e12ac95f0e48ae7&tochange=9ac290ec5884fd52bb6c16e9794da5b42f211cbb
Regressed by Bug 1718755.
| Assignee | ||
Comment 1•4 years ago
|
||
Can you take a profile of it? Also does it happen with X11/xwayland?
The interface is extremely slow and too unresponsive for capturing a profile, I can stop the capture but it gets stuck loading the resulting tab. It does not happen with X11/xwayland.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 4•4 years ago
|
||
RestoreSystemTheme() can trigger gtk theme name changes which can
trigger invalidations again. The other theme changes
(WithAltThemeConfigured and MatchFirefoxThemeIfNeeded) already did this
correctly.
Updated•4 years ago
|
Comment 7•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Updated•4 years ago
|
Description
•