Bug 1722480 - Ensure nsLookAndFeel::EnsureInit doesn't trigger any reentrant invalidation. r=stransky

RestoreSystemTheme() can trigger gtk theme name changes which can
trigger invalidations again. The other theme changes
(WithAltThemeConfigured and MatchFirefoxThemeIfNeeded) already did this
correctly.

Differential Revision: https://phabricator.services.mozilla.com/D120958